--- a/src/styles/subsocial.scss
+++ b/src/styles/subsocial.scss
@@ -1380,7 +1380,7 @@ hr {
 
 .DfHeader {
   background: #fff;
-  padding: 0 $space_normal;
+  padding: 0;
   border-bottom: 1px solid $color_light_border;
   position: fixed;
   z-index: 12;
